--- a/FE/package.json
+++ b/FE/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.3",
+    "vue-sweetalert2": "^1.5.9",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
