--- a/BE/package.json
+++ b/BE/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
+    "node-schedule": "^1.3.1",
     "password-hash": "^1.2.2",
     "socket.io": "^2.1.1"
   }
